--- a/sample/src/main/res/layout/fragment_get_country.xml
+++ b/sample/src/main/res/layout/fragment_get_country.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rilixtech.countrycodepicker.GetCountryFragment">
+    tools:context="com.spisoft.countrycodepicker.GetCountryFragment">
 
     <androidx.cardview.widget.CardView style="@style/parentCard">
 
@@ -55,7 +55,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
 
-                            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
+                            <com.spisoft.widget.countrycodepicker.CountryCodePicker
                                 android:id="@+id/ccp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
