--- a/sampletv/src/main/res/layout/activity_main.xml
+++ b/sampletv/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     tools:deviceIds="tv"
     >
 
+  <ImageView
+      android:id="@+id/im"
+      android:background="@drawable/ic_arrow_drop_down_black_24dp"
+      android:layout_width="60dp"
+      android:layout_height="60dp"/>
+
 
   <EditText
       android:id="@+id/phone_number_edt"
@@ -19,7 +25,7 @@
       android:inputType="phone"
       />
 
-  <com.rilixtech.widget.countrycodepicker.CountryCodePicker
+  <com.spisoft.widget.countrycodepicker.CountryCodePicker
       android:id="@+id/ccp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
